width scroll/overflow fixed

--- a/src/app/three/render-two/render-two.component.scss
+++ b/src/app/three/render-two/render-two.component.scss
@@ -1,6 +1,6 @@
 .three-container {
-    height: 30rem; // maintains 4:3 aspect ratio (height is 75% of width)
-    width: 40rem;
+    height: 25rem; // maintains 4:3 aspect ratio (height is 75% of width)
+    width: 34rem;
     border: 1px solid red;
     color: #d19d9d00;
   }
